# dod-cert-requirements

./: .gitignore  LICENSE-CODE  README.md  pyproject.toml
8140/: 8140-cert-requirements-v2.xlsx  8140-cert-requirements-v3.xlsx  8140-cert-requirements-v4.xlsx  8140-cert-requirements-v5.xlsx  8140-cert-requirements-v6.xlsx  8140-cert-requirements-v7.xlsx  8140-cert-requirements-v8.xlsx  8140-cert-requirements.xlsx  CHANGELOG.md
8140/sources/: dod8140-matrix-v2.1-20250919.xlsx  unclass-dod8140qualmatrix.xlsx
8570/sources/: cyber-mil-snapshot-20240130.html
docs/: refresh-notes-2026-04.md  xlsx-visual-spec.md
far-context/: far-dfars-cert-clauses.md  scoping-notes.md
scripts/: build_refreshed_xlsx.py  diff_matrices.py  extract_official_matrix.py  normalize_jan2025_xlsx.py  render_8140_pdf.py  render_8570_pdf.py  render_changelog.py  schema.py  visual_spec.py
scripts/tests/: build_jan2025_fixture.py  build_v21_fixture.py  test_build_refreshed_xlsx.py  test_diff_matrices.py  test_extract_official_matrix.py  test_normalize_jan2025_xlsx.py  test_render_changelog.py  test_schema.py
scripts/tests/fixtures/: tiny_jan2025.xlsx  tiny_v21.xlsx
